# ros2_ws

install/: local_setup.sh  setup.sh
install/alw82_major_project/share/alw82_major_project/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/alw82_major_project/share/alw82_major_project/launch/: alw82_major_project.launch.xml
install/alw82_ros360_cpp/lib/alw82_ros360_cpp/: colourClient  examplePublisher  exampleSubscriber  headCtrl  pmb2_track  randomTurtle  tiagoColourFinder  torsoCtrl  velodyneSubscriber
install/alw82_ros360_cpp/share/alw82_ros360_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/alw82_ros360_cpp/share/alw82_ros360_cpp/launch/: tiago_assignment.launch.xml
install/gazebo_ros_ackermann_drive_4wd/share/gazebo_ros_ackermann_drive_4wd/: package.sh
install/opencv_tools/lib/opencv_tools/: colour_detector
install/opencv_tools/share/opencv_tools/: package.sh  package.xml
install/opencv_tools/share/opencv_tools/launch/: colour_detector.launch.xml
install/ros360_moveit/lib/ros360_moveit/: tiago_moveit_interface
install/ros360_moveit/share/ros360_moveit/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/track_envs/share/track_envs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/track_envs/share/track_envs/cmake/: track_envsConfig.cmake
install/track_envs/share/track_envs/launch/: track1.launch  track2.launch
install/track_envs/share/track_envs/models/RaceTrackv2/: model.config  model.sdf
install/track_envs/share/track_envs/worlds/: scenario23.world
install/traethlin_description/share/traethlin_description/: local_setup.sh  package.sh
install/traethlin_description/share/traethlin_description/launch/: gazebo.launch.py
install/traethlin_description/share/traethlin_description/urdf/: traethlin.urdf.xacro
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: local_setup.sh  package.sh
install/velodyne_control_msgs/include/velodyne_control_msgs/velodyne_control_msgs/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/velodyne_control_msgs/include/velodyne_control_msgs/velodyne_control_msgs/msg/detail/: velodyne_state__functions.c  velodyne_state__functions.h  velodyne_state__rosidl_typesupport_fastrtps_c.h  velodyne_state__rosidl_typesupport_fastrtps_cpp.hpp  velodyne_state__struct.h  velodyne_state__type_support.cpp
install/velodyne_control_msgs/include/velodyne_control_msgs/velodyne_control_msgs/srv/: velodyne_control.h
install/velodyne_control_msgs/include/velodyne_control_msgs/velodyne_control_msgs/srv/detail/: velodyne_control__builder.hpp  velodyne_control__functions.c  (+5 more)
install/velodyne_control_msgs/share/velodyne_control_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/velodyne_control_msgs/share/velodyne_control_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_velodyne_control_msgs__rosidl_generator_cExport-noconfig.cmake  export_velodyne_control_msgs__rosidl_generator_cppExport.cmake  export_velodyne_control_msgs__rosidl_generator_pyExport.cmake  export_velodyne_control_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  velodyne_control_msgs__rosidl_typesupport_cExport-noconfig.cmake  velodyne_control_msgs__rosidl_typesupport_cExport.cmake  velodyne_control_msgs__rosidl_typesupport_cppExport.cmake  velodyne_control_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  velodyne_control_msgs__rosidl_typesupport_introspection_cExport.cmake  velodyne_control_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/velodyne_control_msgs/share/velodyne_control_msgs/srv/: VelodyneControl.idl  VelodyneControl_Request.msg  VelodyneControl_Response.msg
install/velodyne_simulation/share/velodyne_simulation/: package.bash  package.zsh
src/alw82_major_project/: CMakeLists.txt  package.xml
src/alw82_major_project/launch/: alw82_major_project.launch.xml  colour_detector.launch.xml  project.launch.py
src/alw82_major_project/src/: robot_follower.cpp
src/alw82_major_project/urdf/: leader.urdf.xacro
src/alw82_major_project/worlds/: project_world  project_world_2
src/alw82_ros360_cpp/: CMakeLists.txt  package.xml
src/alw82_ros360_cpp/launch/: pmb2_track.launch.xml  tiago_blocks.launch.xml
src/alw82_ros360_cpp/src/: alw82Assignment.cpp  colourClient.cpp  depthSubscriber.cpp  exampleSubscriber.cpp  headCtrl.cpp  helloWorld.cpp  pmb2_track.cpp  randomTurtle.cpp  tiagoColourFinder.cpp  tiagoColourFinderWithHead.cpp  torsoCtrl.cpp  velodyneSub.cpp
src/opencv_tools/: setup.py
src/opencv_tools/config/: colour_params.yaml
src/opencv_tools/launch/: colour_detector.launch.xml
src/opencv_tools/opencv_tools/: basic_image_publisher.py  basic_image_subscriber.py  colourDetector.py
src/ros360_moveit/: CMakeLists.txt
src/ros360_moveit/launch/: ros360_moveit.launch.py
src/ros360_moveit/src/: tiago_moveit_interface.cpp
src/track_envs/: CMakeLists.txt  package.xml
src/track_envs/models/GreenBin/: model.config  model.sdf
src/track_envs/worlds/: track1.world  track2.world
src/traethlin_description/: CMakeLists.txt
src/traethlin_description/launch/: project.launch.py
(+7 files in other folders)
