<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_tools</name>
  <version>0.0.0</version>
  <description>Package providing some OpenCV tools, based on https://automaticaddison.com/getting-started-with-opencv-in-ros-2-galactic-python/</description>
  <maintainer email="phs@aber.ac.uk">phs</maintainer>
  <license>Apache License 2.0</license>


  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_opencv</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
